[gd_scene load_steps=8 format=2]

[ext_resource path="res://scripts/player.gd" type="Script" id=1]
[ext_resource path="res://images/body_quarter.png" type="Texture" id=2]
[ext_resource path="res://images/face.png" type="Texture" id=3]
[ext_resource path="res://scenes/gui/hud.tscn" type="PackedScene" id=4]
[ext_resource path="res://images/face_hurt.png" type="Texture" id=5]

[sub_resource type="Animation" id=1]

resource_name = "death"
length = 0.8
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("body/face:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 5 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("body/face:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = false
tracks/1/keys = {
"times": PoolRealArray(  ),
"transitions": PoolRealArray(  ),
"update": 0,
"values": [  ]
}
tracks/2/type = "value"
tracks/2/path = NodePath(".:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 0.429688, 0.18631, 0.18631, 1 ), Color( 0.769531, 0.631256, 0.631256, 1 ), Color( 0.429688, 0.18631, 0.18631, 1 ), Color( 0.769531, 0.631256, 0.631256, 1 ), Color( 0.429688, 0.18631, 0.18631, 1 ), Color( 0.769531, 0.631256, 0.631256, 1 ) ]
}
tracks/3/type = "method"
tracks/3/path = NodePath(".")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0.8 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "respawn_player"
} ]
}

[sub_resource type="Animation" id=2]

length = 0.2
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("body/face:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ ExtResource( 3 ), ExtResource( 3 ) ]
}

[node name="player" type="KinematicBody2D"]

modulate = Color( 0.769531, 0.631256, 0.631256, 1 )
position = Vector2( 30, 30 )
input_pickable = false
collision_layer = 1
collision_mask = 1
collision/safe_margin = 0.08
script = ExtResource( 1 )
_sections_unfolded = [ "Angular", "Collision", "Linear", "Pickable", "Visibility", "collision" ]

[node name="Camera2D" type="Camera2D" parent="." index="0"]

anchor_mode = 1
rotating = false
current = true
zoom = Vector2( 1.1, 1.1 )
limit_left = -10000000
limit_top = -10000000
limit_right = 10000000
limit_bottom = 10000000
limit_smoothed = false
drag_margin_h_enabled = true
drag_margin_v_enabled = true
smoothing_enabled = true
smoothing_speed = 5.0
offset_v = 0.0
offset_h = 0.0
drag_margin_left = 0.2
drag_margin_top = 0.2
drag_margin_right = 0.2
drag_margin_bottom = 0.2
editor_draw_screen = true
editor_draw_limits = false
editor_draw_drag_margin = false
_sections_unfolded = [ "Limit", "Smoothing" ]

[node name="body" type="Sprite" parent="." index="1"]

position = Vector2( 0, 40 )
texture = ExtResource( 2 )

[node name="face" type="Sprite" parent="body" index="0"]

position = Vector2( 10, -20 )
scale = Vector2( 0.7, 0.7 )
texture = ExtResource( 3 )
_sections_unfolded = [ "Visibility" ]

[node name="coll_full" type="CollisionPolygon2D" parent="." index="2"]

visible = false
build_mode = 0
polygon = PoolVector2Array( -30, -30, 30, -30, 30, 90, 10, 110, -10, 110, -30, 90 )
disabled = true

[node name="coll_half" type="CollisionPolygon2D" parent="." index="3"]

visible = false
build_mode = 0
polygon = PoolVector2Array( -30, -10, 30, -10, 30, 70, 10, 90, -10, 90, -30, 70 )
disabled = true

[node name="coll_quarter" type="CollisionPolygon2D" parent="." index="4"]

visible = false
build_mode = 0
polygon = PoolVector2Array( -30, 6, 30, 6, 30, 54, 6, 78, -6, 78, -30, 58 )

[node name="hud" parent="." index="5" instance=ExtResource( 4 )]

[node name="anim" type="AnimationPlayer" parent="." index="6"]

root_node = NodePath("..")
autoplay = ""
playback_process_mode = 1
playback_default_blend_time = 0.0
playback_speed = 1.0
anims/death = SubResource( 1 )
anims/idle = SubResource( 2 )
blend_times = [  ]


